startpage: Fix grid-container on mobile resolution
- update to Ivy while we are at it
- switch telegram web to k (I like it better)

--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ a:visited, a:link, a:active {
     border-color: #03C0DD !important;
 }
 .grid-container {
-    height: 28px;
+    height: auto;
     padding-top: 20px;
     margin-left: 14%;
     display: grid;
@@ -59,7 +59,7 @@ a:visited, a:link, a:active {
     gap: 12px 12px;
     text-align: center;
     justify-content: center;
-    grid-template-columns: repeat(8, 8%);
+    grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(2, 1fr);
     transition: opacity .5s;
 }
